# billiards

./: .gitignore  CMakeLists.txt  main.c
maths/: maths.c  maths.h
objects/: mesh.c  mesh.h  model.c  model.h
objects/models/: arrow.mtl  ball_1.mtl  ball_2.mtl  ball_3.mtl  ball_4.mtl  ball_5.mtl  ball_6.mtl  ball_7.mtl  ball_8.mtl  cue.mtl  cue_ball.mtl  table.mtl
resources/models/: ball.mtl  cue.mtl  table.mtl
resources/shaders/: basic_texture_frag.glsl  basic_texture_vert.glsl  basic_vert.glsl  bounding_object_frag.glsl  bounding_object_vert.glsl  frag.glsl  vert.glsl
shaders/: frag.glsl  vert.glsl
simulation/: billiards_game.h  billliards_game.c
src/: main.cpp
src/billiards_game/: BilliardsBall.cpp  BilliardsBall.h  BilliardsGame.cpp  BilliardsGame.h  CueStick.cpp  CueStick.h
src/camera/: Camera.cpp  Camera.h
src/light/: Light.cpp  Light.h
src/material/: Material.cpp  Material.h
src/math/: Matrix.cpp  Matrix.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vec.cpp  Vec.h  Vector.cpp  Vector.h  Vector3.cpp  Vector3.h
src/objects/: BoundingObject.cpp  BoundingObject.h  GeometricObjects.h  Geometry.cpp  Geometry.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object3D.cpp  Object3D.h  Scene.cpp  Scene.h
src/renderer/: Renderer.cpp  Renderer.h
src/resourceManager/: ResourceManager.cpp  ResourceManager.h
src/shader/: Shader.cpp  Shader.h
src/simulation/: BilliardsBall.cpp  BilliardsBall.h  BilliardsPocket.h  BilliardsSimulation.cpp  BilliardsSimulation.h  BilliardsStick.cpp  BilliardsStick.h  BilliardsTable.cpp  BilliardsTable.h
src/texture/: Texture.cpp  Texture.h
src/util/: ObjLoader.cpp  ObjLoader.h  ResourceManager.cpp  ResourceManager.h  Util.cpp  Util.h  stb_image.h
src/window/: Window.cpp  Window.h
tests/: CMakeLists.txt
tests/MathTests/: MathTests.cpp
tests/mathTests/: MatrixTests.cpp  VecTests.cpp  VectorTests.cpp
utils/: camera.c  camera.h  gl_utils.c  gl_utils.h  mesh_import.c  mesh_import.h
window/: window.c  window.h
